--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>Sample Project</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <h1>Hello World!</h1>
   </body>
   <script src="bundle.js"></script>
