--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sample Project</title>
+    <title>Acebook</title>
   </head>
   <body>
     <div id="app"></div>
-    <h1>Hello World!</h1>
   </body>
   <script src="bundle.js"></script>
 </html>
